# FastAF

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Dockerfile  Makefile  cmake_install.cmake  consumer  start.sh
docs/: report.tex
docs/_minted-report/: 758C2648B079658ED7A7ADACB993E4DDE18CAF4E336E16CD28E90DF7D39D1F4B.pygtex
incs/: ArbitrageFinder.hpp  ArbitrageScanner.hpp  BinanceClient.hpp  BinanceClient.inl  FixedPoint.hpp  FixedPoint.tpp  MarketDataClient.hpp  Messages.hpp  OrderEntryClient.hpp  SharedSnapshot.hpp  SharedSnapshot.tpp  TopOfBook.hpp  TopOfBook.inl  macros.hpp  utils.hpp
incs/ipq/: IQueueCRTP.hpp  SPMCQueue.hpp  SPSCQueue.hpp
incs/messages/: BinanceMessages.hpp  InternalMessages.hpp  SBEMessages.hpp
srcs/: ArbitrageFinder.cpp  ArbitrageScanner.cpp  BinanceClient.cpp  MarketDataClient.cpp  consumer.cpp  main.cpp  producer.cpp  utils.cpp
